Istio/Calculator/basicop/multiply/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: multiply
  namespace: <PROJECT>
  labels:
    app: multiply
spec:
  replicas: 1
  selector:
    matchLabels:
      app: multiply     
  template:
    metadata:
      labels:
        app: multiply         
    spec:
      containers:
      - image: <CONTAINER>
        name: multiply-container
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: http-server
      imagePullSecrets:
      - name: bluemix-calculator-secret
