Istio/Calculator/basicop/multiply/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: multiply
  namespace: <PROJECT>
  labels:
    app: multiply
spec:
  ports:
    - port: 80
      targetPort: 80
      name: http
  selector:
    app: multiply
